fix spacing

--- a/client/src/components/reviews/components/ratingBreakdown/ratingBreakdown.css
+++ b/client/src/components/reviews/components/ratingBreakdown/ratingBreakdown.css
@@ -1,14 +1,13 @@
 .ratingBreakdown {
   display: flex;
-  justify-content: space-around;
-  margin: 10px;
-  width: 70%;
+  /* justify-content: space-around; */
+  /* margin: 10px; */
+  /* width: 100%; */
 }
 
 .starNum {
-  margin-right: 5px;
-  /* margin: 5px;
-  padding: 20px; */
+  text-decoration: underline;
+  width: 100px;
 }
 
 .starText {
